# villapy

./: .gitignore  README.md  laboratory.py  pyproject.toml
.github/workflows/: ci.yml
cloud/google/: drive.py
config/: dynamic.py
database/: qurery.py
filesystem/: mapper.py
tests/: test_cloud_google_auth.py  test_cloud_google_drive.py  test_config_dynamic.py  test_config_static.py  test_data_dataframe.py  test_data_text.py  test_database_connection.py  test_database_query.py  test_database_sqlite.py  test_filesystem_files_utils.py  test_filesystem_mapper.py  test_import.py  test_logs.py  test_utils_functions.py
villapy/cloud/google/: auth.py  drive.py
villapy/config/: dynamic.py  static.py
villapy/data/: dataframe.py  text.py
villapy/database/: connection.py  query.py  sqlite.py
villapy/filesystem/: files_utils.py
villapy/looging/: write_log.py
villapy/utils/: functions.py
villapy_lib/cloud/google/: auth.py  drive.py  gmail.py
villapy_lib/config/: dynamic.py
villapy_lib/data/: dataframe.py  dict.py  text.py
villapy_lib/database/: connection.py  query.py
villapy_lib/filesystem/: files_utils.py  mapper.py  project_creator.py
villapy_lib/looging/: write_log.py
villapy_lib/utils/: functions.py
