[project]
name = "villapy"
version = "1.0.5"
description = "Utilities for data engineering workflows"
authors = [{name="Juan Villalpando"}]

dependencies = [
    "pandas==3.0",
    "SQLAlchemy==2.0",
    "python-dotenv==1.1",
    "numpy==2.4.1"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["villapy_lib*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[project.optional-dependencies]

dev = [
    "pytest==9.0"
]

mysql = [
    "PyMySQL==1.1"
]

sqlserver = [
    "pyodbc==5.2"
]

google = [
    "google-auth==2.49",
    "google-auth-oauthlib==1.2",
    "google-api-python-client==2.187",
    "google-cloud-secret-manager==2.24"
]

excel = [
    "openpyxl==3.1"
]